Modify hourly templates

--- a/templates/enquiry-host.html
+++ b/templates/enquiry-host.html
@@ -199,18 +199,18 @@
                             <tr><td height="36" style="font-size: 0; line-height:36px;">&nbsp;</td></tr>
                             <tr>
                                 <td align="left" valign="top" style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#707070;">
-                                   {{guestName}} wants to book your {{listingCategory}}, {{listingTitle}}.
+                                   {{guestName}}&nbsp;wants to book your&nbsp;{{listingCategory}},&nbsp;{{listingTitle}}.
                                 </td>
                             </tr>
                             <tr><td height="36" style="font-size: 0; line-height:36px;">&nbsp;</td></tr>
                             <tr>
                                 <td align="left" valign="top" style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:18px; mso-line-height-rule:exactly;line-height:30px;color:#707070;">
-                                    <strong style="color: #1c3942;">Date:</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{date}}</a>   <br/>
-                                    <strong style="color: #1c3942;">Start:</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{startTime}}</a>   <br/>
-                                    <strong style="color: #1c3942;">Finish:</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{endTime}}</a>   <br/>
-                                    <strong style="color: #1c3942;">Phone:</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{phone}}</a>   <br/>
-                                    <strong style="color: #1c3942;">Email:</strong>  <a style="color:#707070; text-decoration: none;">{{email}}</a>   <br/>
-                                    <strong style="color: #1c3942;">Message:</strong>  {{message}}<br/>
+                                    <strong style="color: #1c3942;">Date:&nbsp;</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{date}}</a>   <br/>
+                                    <strong style="color: #1c3942;">Start:&nbsp;</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{startTime}}</a>   <br/>
+                                    <strong style="color: #1c3942;">Finish:&nbsp;</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{endTime}}</a>   <br/>
+                                    <strong style="color: #1c3942;">Phone:&nbsp;</strong>  <a style="color:#707070; text-decoration: none; cursor: text;">{{phone}}</a>   <br/>
+                                    <strong style="color: #1c3942;">Email:&nbsp;</strong>  <a style="color:#707070; text-decoration: none;">{{guestEmail}}</a>   <br/>
+                                    <strong style="color: #1c3942;">Message:&nbsp;</strong>  {{message}}<br/>
                                 </td>
                             </tr>
                             <tr><td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
@@ -228,7 +228,7 @@
                                                                 <table width="254" align="left" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse; width: 244px;" class="container">
                                                                     <tr>
                                                                         <td class="pad_top15" align="center" valign="top" style="border-radius: 4px; -webkit-border-radius: 4px;">
-                                                                            <img src="{{listingPhoto}}" alt="" title="" width="244" style="display:block;font-family:Arial, sans-serif;font-size:20px;line-height:30px;color:#000000;font-weight:bold; text-transform:uppercase; max-width:244px;border-top-left-radius: 4px; border-bottom-left-radius: 4px;-webkit-border-top-left-radius: 4px; -webkit-border-bottom-left-radius: 4px;" border="0" class="full_img480" />
+                                                                            <img src={{listingPhoto}} alt="" title="" width="244" style="display:block;font-family:Arial, sans-serif;font-size:20px;line-height:30px;color:#000000;font-weight:bold; text-transform:uppercase; max-width:244px;border-top-left-radius: 4px; border-bottom-left-radius: 4px;-webkit-border-top-left-radius: 4px; -webkit-border-bottom-left-radius: 4px;" border="0" class="full_img480" />
                                                                         </td>
                                                                     </tr>
                                                                 </table>
@@ -244,8 +244,8 @@
                                                                     </tr>
                                                                     <tr>
                                                                         <td align="center" valign="top" style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:14px; mso-line-height-rule:exactly;line-height:28px;color:#ffffff;">
-                                                                            {{listingCity}}, {{listingCountry}}<br/>
-                                                                            {{listingCurrency}} <strong>{{listingPrice}} {{listingPeriod}}</strong>
+                                                                            {{listingCity}},&nbsp;{{listingCountry}}<br/>
+                                                                            {{listingCurrency}}&nbsp;<strong>$ &nbsp;{{listingPrice}}&nbsp;{{listingPeriod}}</strong>
                                                                         </td>
                                                                     </tr>
                                                                     <tr><td class="vspace30" height="17" style="font-size: 0; line-height: 17px;">&nbsp;</td></tr>
