--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -272,7 +272,7 @@
                 <tr>
                   <td align="left" valign="top"
                     style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:29px;color:#172439;">
-                    Hi {{user}},
+                    Hi&nbsp;{{user}},
                   </td>
                 </tr>
                 <tr>
@@ -295,7 +295,7 @@
                         <td bgcolor="#6ADC91"
                           style="padding: 22px 0px; border-radius:37px; -webkit-border-radius: 37px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                           align="center">
-                          <a href="#" target="_blank"
+                          <a href="{{link}}" target="_blank"
                             style="color: #ffffff; text-decoration: none; display: inline-block;">Verify your email</a>
                         </td>
                       </tr>
