Fixing request email.

--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -305,7 +305,7 @@
                 <tr>
                   <td align="left" valign="top"
                     style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;">
-                    You’ve sent a booking request&nbsp;{{conﬁrmationCode}}&nbsp;for&nbsp;{{listTitle}}&nbsp;checking in
+                    You’ve sent a booking request&nbsp;{{confirmationCode}}&nbsp;for&nbsp;{{listTitle}}&nbsp;checking in
                     on&nbsp;{{checkInDate}}&nbsp;to&nbsp;{{hostName}}. You’ll hear from them shortly definitely within
                     24 hours.
                   </td>
