--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -5,13 +5,13 @@
 
 <head>
   <!--[if gte mso 9]>
-      <xml>
-        <o:OfficeDocumentSettings>
-          <o:AllowPNG />
-          <o:PixelsPerInch>96</o:PixelsPerInch>
-        </o:OfficeDocumentSettings>
-      </xml>
-    <![endif]-->
+  <xml>
+    <o:OfficeDocumentSettings>
+      <o:AllowPNG />
+      <o:PixelsPerInch>96</o:PixelsPerInch>
+    </o:OfficeDocumentSettings>
+  </xml>
+  <![endif]-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <!--[if !mso]><!-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,8 +20,7 @@
   <meta name="format-detection" content="telephone=no" />
   <title>spacenow</title>
   <!--[if !mso]><!-->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   <!--<![endif]-->
   <style type="text/css">
     /* GENERAL STYLE RESETS */
@@ -322,9 +321,7 @@
                               <td bgcolor="#6ADC91"
                                 style="padding: 22px 0px; border-radius:37px; -webkit-border-radius: 37px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                                 align="center">
-                                <a href="https://www.novica.com/?cellid=JRL2019080130&amp;emh={{
-                                      rs_urid
-                                    }}&amp;utm_medium=email&amp;utm_source=eblast" target="_blank"
+                                <a href="https://www.novica.com/?cellid=JRL2019080130&amp;utm_medium=email&amp;utm_source=eblast" target="_blank"
                                   style="color: #ffffff; text-decoration: none; display: inline-block;">Accept
                                   booking</a>
                               </td>
