Updating instant emails.

--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -519,9 +519,7 @@
                         <td bgcolor="#6ADC91"
                           style="padding: 22px 0px; border-radius:37px; -webkit-border-radius: 37px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                           align="center">
-                          <a href="https://www.novica.com/?cellid=JRL2019080130&amp;emh={{
-                                rs_urid
-                              }}&amp;utm_medium=email&amp;utm_source=eblast" target="_blank"
+                          <a href="https://www.novica.com/?cellid=JRL2019080130&amp;utm_medium=email&amp;utm_source=eblast" target="_blank"
                             style="color: #ffffff; text-decoration: none; display: inline-block;">Message Guest</a>
                         </td>
                       </tr>
