Fixing request email host.

--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -321,9 +321,8 @@
                               <td bgcolor="#6ADC91"
                                 style="padding: 22px 0px; border-radius:37px; -webkit-border-radius: 37px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                                 align="center">
-                                <a href="https://www.novica.com/?cellid=JRL2019080130&amp;utm_medium=email&amp;utm_source=eblast" target="_blank"
-                                  style="color: #ffffff; text-decoration: none; display: inline-block;">Accept
-                                  booking</a>
+                                <a href="{{acceptLink}}" target="_blank"
+                                  style="color: #ffffff; text-decoration: none; display: inline-block;">Accept booking</a>
                               </td>
                             </tr>
                           </table>
@@ -335,9 +334,7 @@
                               <td bgcolor="#E05252"
                                 style="padding: 22px 0px; border-radius:37px; -webkit-border-radius: 37px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                                 align="center">
-                                <a href="#" target="_blank"
-                                  style="color: #ffffff; text-decoration: none; display: inline-block;">Decline
-                                  booking</a>
+                                <a href="{{declineLink}}" target="_blank" style="color: #ffffff; text-decoration: none; display: inline-block;">Decline booking</a>
                               </td>
                             </tr>
                           </table>
