Fixing instant email guest.

--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -582,14 +582,12 @@
                                                                                                 <td align="left"
                                                                                                     valign="top"
                                                                                                     style="padding-bottom: 8px; font-family: 'Montserrat', Helvetica, Arial, sans-serif ; font-weight: 600; font-size:14px; mso-line-height-rule:exactly;line-height:22px;color:#1F252A;">
-                                                                                                    Check-in | Check-out
-                                                                                                </td>
-                                                                                            </tr>
-                                                                                            <tr>
-                                                                                                <td align="left"
-                                                                                                    valign="top"
-                                                                                                    style="padding-bottom: 8px; font-family: 'Montserrat', Helvetica, Arial, sans-serif ; font-weight: 600; font-size:14px; mso-line-height-rule:exactly;line-height:22px;color:#1F252A;">
-                                                                                                    {{checkInDate}}&nbsp;{{checkOutDate}}
+                                                                                                    <spam>Check-in:</spam>
+                                                                                                    <br />{{checkInDate}}
+                                                                                                    <br />
+                                                                                                    <br />
+                                                                                                    <spam>Check-out:</spam>
+                                                                                                    <br />{{checkOutDate}}
                                                                                                 </td>
                                                                                             </tr>
                                                                                             {{/if}}
@@ -663,19 +661,19 @@
                                                                                                 <td align="left"
                                                                                                     valign="top"
                                                                                                     style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#1F252A;">
-                                                                                                    {{timeTable.monOpen}}&nbsp;to&nbsp;{{timeTable.monClose}}
+                                                                                                    {{timeTable.[1]}}
                                                                                                     <br />
-                                                                                                    {{timeTable.tueOpen}}&nbsp;to&nbsp;{{timeTable.tueClose}}
+                                                                                                    {{timeTable.[2]}}
                                                                                                     <br />
-                                                                                                    {{timeTable.wedOpen}}&nbsp;to&nbsp;{{timeTable.wedClose}}
+                                                                                                    {{timeTable.[3]}}
                                                                                                     <br />
-                                                                                                    {{timeTable.thuOpen}}&nbsp;to&nbsp;{{timeTable.thuClose}}
+                                                                                                    {{timeTable.[4]}}
                                                                                                     <br />
-                                                                                                    {{timeTable.friOpen}}&nbsp;to&nbsp;{{timeTable.friClose}}
+                                                                                                    {{timeTable.[5]}}
                                                                                                     <br />
-                                                                                                    {{timeTable.satOpen}}&nbsp;to&nbsp;{{timeTable.satClose}}
+                                                                                                    {{timeTable.[6]}}
                                                                                                     <br />
-                                                                                                    {{timeTable.sunOpen}}&nbsp;to&nbsp;{{timeTable.sunClose}}
+                                                                                                    {{timeTable.[0]}}
                                                                                                 </td>
                                                                                             </tr>
                                                                                         </table>
