--- a/templates/booking-declined-email.html
+++ b/templates/booking-declined-email.html
@@ -221,17 +221,6 @@
                     </table>
                   </td>
                   <td class="mobile-hide" width="20">&nbsp;</td>
-                  <td class="tdblock" align="center" valign="top">
-                    <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0"
-                      style="border-collapse: collapse;">
-                      <tr>
-                        <td class="center" align="right" valign="middle"
-                          style="padding-top: 10px;  font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:16px; font-weight: normal;mso-line-height-rule:exactly;line-height:25px;color:#142D3F;">
-                          <a style="text-decoration: none; color: #142D3F;cursor: text;">Tuesday, July 17, 2018</a>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
                 </tr>
               </table>
             </td>
@@ -274,7 +263,7 @@
                   <td align="left" valign="top"
                     style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;">
                     Unfortunately the host {{hostName}} declined your request
-                    {{conﬁrmationCode}} starting on {{checkInDate}}. It’s not you
+                    {{confirmationCode}} starting on {{checkInDate}}. It’s not you
                     - it’s them. Seriously, hosts’ circumstances sometimes
                     suddenly change and we are sorry for the inconvenience.
                     <br /><br />
