Fixing request email host.

--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -300,9 +300,9 @@
                 <tr>
                   <td align="left" valign="top"
                     style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;">
-                    {{guestName}} wants to book {{listTitle}} from {{checkInDate}}
-                    to {{checkOutDate}}. Based on your price of {{basePrice}} per
-                    night, this booking will earn you a cool {{total}}. Nice.
+                    {{guestName}}&nbsp;wants to book&nbsp;{{listTitle}}&nbsp;from&nbsp;{{checkInDate}}
+                    to&nbsp;{{checkOutDate}}.&nbsp;Based on your price of&nbsp;{{basePrice}}&nbsp;per
+                    night, this booking will earn you a cool&nbsp;{{total}}.&nbsp;Nice!
                   </td>
                 </tr>
                 <tr>
