Defining declined booking.

--- a/templates/booking-declined-email.html
+++ b/templates/booking-declined-email.html
@@ -251,7 +251,7 @@
                 <tr>
                   <td align="left" valign="top"
                     style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:38px;color:#172439;">
-                    Hi {{guestName}},
+                    Hi&nbsp;{{guestName}},
                   </td>
                 </tr>
                 <tr>
@@ -262,8 +262,8 @@
                 <tr>
                   <td align="left" valign="top"
                     style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;">
-                    Unfortunately the host {{hostName}} declined your request
-                    {{confirmationCode}} starting on {{checkInDate}}. It’s not you
+                    Unfortunately the host&nbsp;{{hostName}}&nbsp;declined your request
+                    &nbsp;{{confirmationCode}}&nbsp;starting on&nbsp;{{checkInDate}}.&nbsp;It’s not you
                     - it’s them. Seriously, hosts’ circumstances sometimes
                     suddenly change and we are sorry for the inconvenience.
                     <br /><br />
@@ -283,7 +283,7 @@
                         <td bgcolor="#6ADC91"
                           style="padding: 22px 0px; border-radius:37px; -webkit-border-radius: 37px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                           align="center">
-                          <a href="#" target="_blank"
+                          <a href="{{appLink}}" target="_blank"
                             style="color: #ffffff; text-decoration: none; display: inline-block;">Look again</a>
                         </td>
                       </tr>
